Fixed small box shadow issue w/ input field on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -161,6 +161,7 @@ footer a:hover{
   input {
     min-width: 0;
     width: 100%;
+    box-shadow: none !important;
   }
 
   button {
